inputs rollup added

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,7 +32,7 @@ body {
 @import "./pages/editProfile/editProfile.scss";
 @import "./pages/editPassword/editPassword.scss";
 @import "./pages/login/login.scss";
-@import "./pages/auth/auth.scss";
+@import "./pages/register/register.scss";
 @import "./pages/chat/chat.scss";
 @import "./pages/404Error/404Error.scss";
 @import "./pages/5Error/5Error.scss";
