--- a/src/pages/editPassword/editPassword.scss
+++ b/src/pages/editPassword/editPassword.scss
@@ -7,6 +7,9 @@
     align-items: center;
 
     .editPassword__inputs {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         width: 25%;
         margin-top: 60px;
 
@@ -19,23 +22,14 @@
             border-bottom: 1px solid var(--border-color);
             margin-bottom: 5px;
         }
-    }
 
-    .password-inputs__wrapper {
-        width: 45%;
-        margin-top: 60px;
-    }
-
-    .inputProfile {
-        margin-bottom: 15px;
+        .button {
+            margin-top: 20px;
+            width: 200px;
+        }
     }
 
     .backButton {
         margin: 10px 0;
     }
-
-    .button {
-        width: 200px;
-    }
-
 }
