--- a/src/pages/register/register.scss
+++ b/src/pages/register/register.scss
@@ -6,6 +6,10 @@
     align-items: center;
     background-color: rgb(255, 255, 255);
 
+    .register__form {
+        width: 300px;
+    }
+
     .button__solid {
         margin: 40px 0 0 0;
     }
