--- a/src/partials/button/button.hbs
+++ b/src/partials/button/button.hbs
@@ -1,1 +1,6 @@
-<button class="button {{classes}}" type="button">{{text}}</button>
+<button 
+    class="button {{classes}}" 
+    {{#if type}}type="{{type}}"{{/if}}
+>
+    {{text}}
+</button>
