--- a/src/partials/profile/profile.hbs
+++ b/src/partials/profile/profile.hbs
@@ -5,6 +5,7 @@
             type="email" 
             value="semenlovescats@yandex.ru"
             name="email"
+            id="email"
             {{#if disabled}}disabled{{/if}}
         />
         <span>Email</span>
@@ -16,6 +17,7 @@
             type="text" 
             value="semyon"
             name="login"
+            id="login"
             {{#if disabled}}disabled{{/if}}
         />
         <span>Логин</span>
@@ -27,6 +29,7 @@
             type="text" 
             value="Семен"
             name="first_name"
+            id="first_name"
             {{#if disabled}}disabled{{/if}}
         />
         <span>Имя</span>
@@ -38,6 +41,7 @@
             type="text" 
             value="Семенов"
             name="second_name"
+            id="second_name"
             {{#if disabled}}disabled{{/if}}
         />
         <span>Фамилия</span>
@@ -50,6 +54,7 @@
             value="Сема"
             {{disabled}}
             name="display_name"
+            id="display_name"
             {{#if disabled}}disabled{{/if}}
         />
         <span>Имя в чате</span>
@@ -61,6 +66,7 @@
             type="text" 
             value="+7456729078"
             name="phone"
+            id="phone"
             {{#if disabled}}disabled{{/if}}
         />
         <span>Телефон</span>
