--- a/src/partials/input/input.scss
+++ b/src/partials/input/input.scss
@@ -8,21 +8,20 @@
     color: var(--text-primary);
     font-weight: 500;
     line-height: 13px;
-<<<<<<< HEAD
     margin-top: 15px;
 }
 
 .input-error {
-    color: red;
+    color: rgb(195, 0, 0);
 }
 
 .error-input {
-    border: 1px solid red;
+    border: 1px solid rgb(144, 0, 0);
     border-radius: 5px;
 }
 
 .error-msg {
-    color: rgb(168 0 0);
+    color: rgb(114, 0, 0);
     font-size: 12px;
 }
 
@@ -38,7 +37,4 @@
     border-radius: 15px;
     padding-left: 10px;
     font-size: 14px;
-=======
-    margin-bottom: 15px;
->>>>>>> main
 }
