--- a/src/partials/input/input.scss
+++ b/src/partials/input/input.scss
@@ -12,16 +12,16 @@
 }
 
 .input-error {
-    color: rgb(195, 0, 0);
+    color: rgb(195 0 0);
 }
 
 .error-input {
-    border: 1px solid rgb(144, 0, 0);
+    border: 1px solid rgb(144 0 0);
     border-radius: 5px;
 }
 
 .error-msg {
-    color: rgb(114, 0, 0);
+    color: rgb(114 0 0);
     font-size: 12px;
 }
 
