--- a/src/pages/chat/chat.scss
+++ b/src/pages/chat/chat.scss
@@ -79,7 +79,7 @@
             }
 
             .sendMsg-button {
-                background: none;
+                background: url('@/src/images/sendButton.svg?url');
                 border: transparent;
                 width: 30px;
             }
