--- a/src/partials/button/button.scss
+++ b/src/partials/button/button.scss
@@ -17,3 +17,9 @@
     border: 1px solid var(--button-color);
     color: var(--button-color);
 }
+
+.back-button {
+    background: none;
+    width: 30px;
+    border: none;
+}
