--- a/variables/variables.scss
+++ b/variables/variables.scss
@@ -16,5 +16,5 @@
     --notOwnMessage-time-color: rgb(198 159 212);
     --border-color: #d6d6d6;
     --chatHeader-bg: rgb(133 45 184);
-    --error: rgb(133, 0, 0);
+    --error: rgb(133 0 0);
   }
