--- a/src/partials/menu/menu.scss
+++ b/src/partials/menu/menu.scss
@@ -1,6 +1,6 @@
 .menu {
     width: 100%;
-    padding: 10px 20px;
+    padding: 5px 20px;
     display: flex;
     justify-content: flex-end;
     box-sizing: border-box;
@@ -11,7 +11,11 @@
         cursor: pointer;
     }
 
-    img {
+    .profile-button {
+        border: none;
+        width: 30px;
+        height: 40px;
+        background: none;
         cursor: pointer;
         margin-left: 5px;
     }
